--- a/src/assets/styles/varaiables.styles.scss
+++ b/src/assets/styles/varaiables.styles.scss
@@ -7,6 +7,7 @@ $black: #000;
 $white: #eee;
 $dark-gray: #333;
 $gray: #696969;
+$yellow: #fef24e;
 
 /// **fonts 
 $bold: 800;
